crate/lib/sinex-macros/tests/compile_fail/unrecognized_attr.stderr
error: unrecognized event_payload attribute
 --> tests/compile_fail/unrecognized_attr.rs:8:5
  |
8 |     unknown_key = "value"
  |     ^^^^^^^^^^^
